updated font color as well as hero image format

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Just a basic landing page" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Landing</title>
   </head>
@@ -33,7 +34,7 @@
           <button class="btn">Sign up</button>
         </div>
         <div class="main-img">
-          <img src="./assets/images/note.jpg" alt="image of a notepad" />
+          <img src="./assets/images/final/note.webp" alt="image of a notepad" />
         </div>
       </div>
     </div>
@@ -71,7 +72,7 @@
     <div class="info-3">
       <div class="sign-up">
         <div class="sign-up-text">
-          <h3>Call to action! It's time!</h3>
+          <h2>Call to action! It's time!</h2>
           <p>Sign up for our product by clicking on that button over there.</p>
         </div>
         <div class="sign-up-btn">
